# crypto-publicdata

./: CLAUDE.md  README.md  crypto_publicdata.opam  dune-project
.claude/: settings.json
lib/: aggregator.ml  binance_adapter.ml  binance_rest.ml  binance_ws.ml  bitget_adapter.ml  bitget_rest.ml  bitget_ws.ml  bybit_adapter.ml  bybit_rest.ml  bybit_ws.ml  coinbase_adapter.ml  coinbase_rest.ml  dune  exchange.ml  hyperliquid_adapter.ml  hyperliquid_rest.ml  hyperliquid_ws.ml  kraken_adapter.ml  kraken_rest.ml  kraken_ws.ml  protocol.ml  server.ml  shadow.ml  symbol_normalizer.ml  ticker.ml  ticker_delta.ml  ticker_json.ml
test/: dune  test_aggregator.ml  test_binance_rest.ml  test_binance_ws.ml  test_bitget_rest.ml  test_bitget_ws.ml  test_bybit_rest.ml  test_bybit_ws.ml  test_coinbase_rest.ml  test_crypto_publicdata.ml  test_exchange.ml  test_hyperliquid_rest.ml  test_hyperliquid_ws.ml  test_kraken_rest.ml  test_kraken_ws.ml  test_protocol.ml  test_server.ml  test_server_api.ml  test_shadow.ml  test_symbol_normalizer.ml  test_ticker_delta.ml  test_ticker_json.ml
